[package]
name = "redis_rawl"
version = "0.7.4"
authors = ["raul gherman <raul.gherman@protonmail.com>"]
edition = "2024"
description = """
Minimal Redis client library implementation.
Forked from redis-raw `git@github.com:aminroosta/redis-raw-rs.git`"""
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/redis_rawl"
homepage = "https://github.com/raul-gherman/redis-rawl"
repository = "https://github.com/raul-gherman/redis-rawl"
categories = ["database"]

[dependencies]
concat-strs-derive = "0.1.20250315"
thiserror = "2.0"
tokio = { version = "1.45.0", features = ["io-util", "net"] }
